trying to fix the vh issue on mobile

--- a/src/components/PageContainerNoScroll/PageContainerNoScroll.styles.css
+++ b/src/components/PageContainerNoScroll/PageContainerNoScroll.styles.css
@@ -8,7 +8,7 @@
     position: absolute;
     top: var(--header-mobile-height);
     right: 0;
-    height: calc(var(--vh, 1vh) * 90);
+    height: calc(var(--vh, 1vh) * 90 - env(safe-area-inset-bottom, 0.5vh));
     width: 100vw;
   }
 }
