--- a/src/styling/GlobalVariables.styles.css
+++ b/src/styling/GlobalVariables.styles.css
@@ -17,7 +17,9 @@
   --color-button-blue: #52c1ff;
 
   /* Headers mobile and desktop*/
-  --header-mobile-height: calc(var(--vh, 1vh) * 10);
+  --header-mobile-height: calc(
+    var(--vh, 1vh) * 10 - env(safe-area-inset-top, 20px) ;
+  );
   --header-desktop-height: 5.5rem;
 
   /* Footer */
